feat: introduce adbe-read module for CQRS read side with HTTP query API
- Added QueryType enum to define various read query types.
- Implemented ReadCallback interface for handling query responses.
- Created ReadQueryGateway for managing query requests and responses using lock-free ring buffers.
- Developed integration tests for ReadService to ensure correct read model behavior.
- Added unit tests for ReadQueryGateway to validate request-response correlation and cancellation.
- Created Docker Compose configuration for a read-enabled ADBE cluster.
- Implemented entrypoint script for starting read nodes in the cluster.
- Updated API documentation to include read endpoints and usage examples.
- Documented architectural decisions regarding the read side implementation.
- Enhanced operations documentation to cover read service deployment and health checks.
- Updated Gradle configuration to include necessary dependencies for the read module.